edit the subscription_key
Although I re-generated my key, I modified the subscription_key.

--- a/Sifan_Guo_VizWiz-Lab4.ipynb
+++ b/Sifan_Guo_VizWiz-Lab4.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "\n",
     "%matplotlib inline\n",
-    "subscription_key = 'a2b4c57884cb455e88b4f419c037ca8b'\n",
+    "subscription_key = 'edited for privacy'\n",
     "\n",
     "vision_base_url = 'https://eastus.api.cognitive.microsoft.com/vision/v1.0'\n",
     "vision_analyze_url = vision_base_url + '/analyze?'    \n",
